alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,11 +68,11 @@ header nav ul li {
 header nav ul li a {
     text-decoration: none;
     color: #fff;
-    font-family: 'Roboto';
-    /* padding: 10px 15px; */
-    font-size: 16px;
+    font-family:'cursive';
+    padding: 8px 0px;
+    font-size: 17px;
     text-transform: uppercase;
-    position: relative;
+    position: static;
     transition: color 0.3s ease, background-color 0.3s ease;
 }
 
@@ -358,7 +358,7 @@ header.sticky {
 .info-flex-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 20px;
 }
 
@@ -662,6 +662,7 @@ header.sticky {
     background: linear-gradient(135deg, #29467b, #5b7ebb); /* Futuristic gradient background */
     color: #ffffff;
     padding: 30px;
+    padding-bottom: 35px;
     border-radius: 15px;
     text-align: left;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6); /* Increased shadow for more depth */
@@ -706,6 +707,8 @@ header.sticky {
     background: rgba(255, 255, 255, 0.1); /* Semi-transparent background */
     margin-bottom: 15px;
     padding: 20px;
+    padding-bottom: 30px;
+    /* gap: 200px; */
     border-radius: 8px;
     font-size: 18px;
     display: flex;
